language/move-lang/tests/move_check/translated_ir_tests/commands/join_failure.move
module M {
    resource struct R { f:bool }
    fun t0() {
        let r = R{ f: false };
        let f;

        if (true) {
            R{ f } = move r;
        } else {
            R{ f } = move r;
            r = R{ f: false };
        };
        R{ f: _ } = move r;
        f;
    }
}
